// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateModelConfig no providers available returns ULTIMATE_FALLBACK for all agents and categories when no providers 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/glm-4.7-free",
    },
    "broodmother": {
      "model": "opencode/glm-4.7-free",
    },
    "clockwerk": {
      "model": "opencode/glm-4.7-free",
    },
    "enigma": {
      "model": "opencode/glm-4.7-free",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "mirana": {
      "model": "opencode/glm-4.7-free",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "opencode/glm-4.7-free",
    },
    "tinker": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/glm-4.7-free",
    },
    "deep": {
      "model": "opencode/glm-4.7-free",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models when only Claude is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "opencode/glm-4.7-free",
    },
    "clockwerk": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Claude models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "opencode/glm-4.7-free",
    },
    "clockwerk": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models when only OpenAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "openai/gpt-5.2",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "openai/gpt-5-nano",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses OpenAI models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "broodmother": {
      "model": "openai/gpt-5.2",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "tinker": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "openai/gpt-5-nano",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "openai/gpt-5.3-codex",
      "variant": "high",
    },
    "unspecified-low": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "visual-engineering": {
      "model": "opencode/glm-4.7-free",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models when only Gemini is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/glm-4.7-free",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "clockwerk": {
      "model": "opencode/glm-4.7-free",
    },
    "invoker": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "opencode/glm-4.7-free",
    },
    "tinker": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig single native provider uses Gemini models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/glm-4.7-free",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "clockwerk": {
      "model": "opencode/glm-4.7-free",
    },
    "invoker": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "keeper": {
      "model": "opencode/glm-4.7-free",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "opencode/glm-4.7-free",
    },
    "tinker": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models from fallback chains when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig all native providers uses preferred models with isMax20 flag when all natives available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models when only OpenCode Zen is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "opencode/gemini-3-flash",
    },
    "clockwerk": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "opencode/claude-haiku-4-5",
    },
    "oracle": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses OpenCode Zen models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "opencode/gemini-3-flash",
    },
    "clockwerk": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "opencode/claude-haiku-4-5",
    },
    "oracle": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "opencode/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "opencode/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "opencode/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models when only Copilot is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "broodmother": {
      "model": "github-copilot/gpt-5.2",
    },
    "clockwerk": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "keeper": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "mirana": {
      "model": "github-copilot/gpt-5-mini",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "tinker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "deep": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "writing": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses GitHub Copilot models with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "broodmother": {
      "model": "github-copilot/gpt-5.2",
    },
    "clockwerk": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "keeper": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "mirana": {
      "model": "github-copilot/gpt-5-mini",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "tinker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "deep": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "writing": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for keeper when only ZAI is available 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/glm-4.7-free",
    },
    "broodmother": {
      "model": "opencode/glm-4.7-free",
    },
    "clockwerk": {
      "model": "opencode/glm-4.7-free",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "opencode/glm-4.7-free",
    },
    "tinker": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig fallback providers uses ZAI model for keeper with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "opencode/glm-4.7-free",
    },
    "broodmother": {
      "model": "opencode/glm-4.7-free",
    },
    "clockwerk": {
      "model": "opencode/glm-4.7-free",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "mirana": {
      "model": "opencode/gpt-5-nano",
    },
    "oracle": {
      "model": "opencode/glm-4.7-free",
    },
    "rubick": {
      "model": "opencode/glm-4.7-free",
    },
    "tinker": {
      "model": "opencode/glm-4.7-free",
    },
  },
  "categories": {
    "quick": {
      "model": "opencode/glm-4.7-free",
    },
    "ultrabrain": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-high": {
      "model": "opencode/glm-4.7-free",
    },
    "unspecified-low": {
      "model": "opencode/glm-4.7-free",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
    "writing": {
      "model": "opencode/glm-4.7-free",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + OpenCode Zen combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "opencode/gemini-3-flash",
    },
    "clockwerk": {
      "model": "opencode/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "opencode/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "opencode/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses OpenAI + Copilot combination 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "broodmother": {
      "model": "openai/gpt-5.2",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "keeper": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "mirana": {
      "model": "github-copilot/gpt-5-mini",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "tinker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "writing": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Claude + ZAI combination (keeper uses ZAI) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "opencode/glm-4.7-free",
    },
    "clockwerk": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "zai-coding-plan/glm-5",
    },
    "writing": {
      "model": "anthropic/claude-sonnet-4-5",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses Gemini + Claude combination (mirana uses Gemini) 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "clockwerk": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all fallback providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "broodmother": {
      "model": "opencode/gemini-3-flash",
    },
    "clockwerk": {
      "model": "github-copilot/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "mirana": {
      "model": "opencode/claude-haiku-4-5",
    },
    "oracle": {
      "model": "github-copilot/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
    "tinker": {
      "model": "github-copilot/claude-opus-4.6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "github-copilot/claude-haiku-4.5",
    },
    "ultrabrain": {
      "model": "github-copilot/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "unspecified-low": {
      "model": "github-copilot/claude-sonnet-4.5",
    },
    "visual-engineering": {
      "model": "opencode/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "opencode/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers together 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;

exports[`generateModelConfig mixed provider scenarios uses all providers with isMax20 flag 1`] = `
{
  "$schema": "https://raw.githubusercontent.com/code-yeongyu/oh-my-opencode/master/assets/oh-my-opencode.schema.json",
  "agents": {
    "axe": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "broodmother": {
      "model": "google/gemini-3-flash",
    },
    "clockwerk": {
      "model": "openai/gpt-5.2",
      "variant": "medium",
    },
    "enigma": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "invoker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "keeper": {
      "model": "zai-coding-plan/glm-4.7",
    },
    "mirana": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "oracle": {
      "model": "openai/gpt-5.2",
      "variant": "high",
    },
    "rubick": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "tinker": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
  },
  "categories": {
    "artistry": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "deep": {
      "model": "openai/gpt-5.3-codex",
      "variant": "medium",
    },
    "quick": {
      "model": "anthropic/claude-haiku-4-5",
    },
    "ultrabrain": {
      "model": "openai/gpt-5.3-codex",
      "variant": "xhigh",
    },
    "unspecified-high": {
      "model": "anthropic/claude-opus-4-6",
      "variant": "max",
    },
    "unspecified-low": {
      "model": "anthropic/claude-sonnet-4-5",
    },
    "visual-engineering": {
      "model": "google/gemini-3-pro",
      "variant": "high",
    },
    "writing": {
      "model": "google/gemini-3-flash",
    },
  },
}
`;
